2006-03-19  Aaron Bockover  <aaron@abock.org>

	* src/Banshee.Base/Gui/SeekDialog.cs: Implement the glade SeekDialog; 
	forgot to commit last time

2006-03-19  Aaron Bockover  <aaron@abock.org>

	* banshee.mdp: Updated MonoDevelop project

	* src/PlayerInterface.cs: Handle SeekToAction and show the new seek dialog

	* src/Banshee.Base/ActionManager.cs: Implement an action for SeekToAction

	* src/Banshee.Base/Makefile.am: Added Gui/SeekDialog.cs

	* src/Banshee.Base/Gui/OpenLocationDialog.cs: Fixed typo in header

	* src/Banshee.Widgets/StreamPositionLabel.cs: Added FormatString parameter

	* data/UIManagerLayout.xml: Added SeekToAction to playback menu

	* data/banshee.glade: Added SeekDialog

2006-03-18  Aaron Bockover  <aaron@abock.org>

	* src/Banshee.Plugins/NotificationAreaIcon/NotificationAreaIconPlugin.cs:
	Use DisplayArtist, DisplayAlbum, and DisplayTitle for setting the 
	display data in TrackInfoHeader

2006-03-17  Aaron Bockover  <aaron@abock.org>

	* libbanshee/gst-playback-0.10.c: Create a custom audio sink that contains
	a tee element; plugins can request and connect to new source pads from
	the tee to stream audio to elements in their control without breaking
	the normal flow of data to the sound card

	* src/Banshee.MediaEngine/Gstreamer/GstPlayerEngine.cs: Implement 
	PlayerEngine.GetBaseElements and return an IntPtr array containing the
	playbin, audiotee, and audiobin elements plugins can use to extend the
	pipeline

	* src/Banshee.Base/MediaEngine/PlayerEngine.cs: Removed SetProperty; 
	added GetBaseElements that returns an IntPtr array

2006-03-17  Aaron Bockover  <aaron@abock.org>

	* src/Banshee.Base/AudioCd/AudioCdDisk.cs (Eject): Stop playback if 
	the playing stream is a track on the disk that is about to be ejected

	* libbanshee/gst-playback-0.10.c (gst_playback_open): Reset the pipeline
	to READY state if not already there

2006-03-17  Aaron Bockover  <aaron@abock.org>
